fixed hidden menu on resize from mobile to desktop

--- a/themes/sgsc/sass/_header.scss
+++ b/themes/sgsc/sass/_header.scss
@@ -153,6 +153,12 @@
     align-self: flex-end;
   }
 
+
+    .site-header .menu .overlay.desktopWidth {
+      display: block !important;
+    }
+  
+
 .search-form {
   fieldset {
   border: none;
