--- a/themes/sgsc/sass/_join-us.scss
+++ b/themes/sgsc/sass/_join-us.scss
@@ -103,7 +103,7 @@
   margin-top: 21px;
   h2 {
     font-family: $font__header;
-    font-size: $font_m-h2;
+    font-size: 19px;
     color: $black;
     text-decoration: none;
     width: 163px;
