--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -1154,6 +1154,8 @@ object {
     width: 98%;
     -ms-flex-item-align: end;
         align-self: flex-end; }
+  .site-header .menu .overlay.desktopWidth {
+    display: block !important; }
   .search-form fieldset {
     border: none;
     padding-left: 0;
@@ -3405,7 +3407,7 @@ footer {
   .post-type-archive-volunteer .membership-renewal h2,
   .post-type-archive-volunteer .volunteer h2 {
     font-family: montserrat, merriweather, sans-serif;
-    font-size: 16px;
+    font-size: 19px;
     color: #000000;
     text-decoration: none;
     width: 163px;
