changed header for team and board page

--- a/themes/sgsc/sass/_about-our-board.scss
+++ b/themes/sgsc/sass/_about-our-board.scss
@@ -154,6 +154,18 @@
       }
     }
 
+
+  .entry-title {
+    bottom: -10rem;
+    height: 10rem;
+  }
+    
+  .content-area {
+    margin-top: 10rem;
+  }
+
+
+
   .entry-content {
     P {
       font-style: $font__body;
