--- a/themes/sgsc/sass/_about-our-team.scss
+++ b/themes/sgsc/sass/_about-our-team.scss
@@ -120,7 +120,7 @@
         object-position: 45% 0%;
       }
     }
-  } 
+  
 
     .entry-content {
     P {
@@ -128,6 +128,16 @@
       font-size: $font_d-sub-body;
       line-height: 24px;
     }
+  }
+
+
+  .entry-title {
+    bottom: -10rem;
+    height: 10rem;
+  }
+    
+  .content-area {
+    margin-top: 10rem;
   }
 
 
@@ -178,3 +188,4 @@
       display: none;
     }
   }
+}
