--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2756,49 +2756,54 @@ footer {
 @media all and (min-width: 480px) {
   .page-template-page-about-our-team .entry-header img {
     object-position: 45% 0%; }
-  .entry-content P {
+  .page-template-page-about-our-team .entry-content P {
     font-style: lato, novecentosanswide, sans-serif;
     font-size: 18px;
     line-height: 24px; }
-  .team-members {
+  .page-template-page-about-our-team .entry-title {
+    bottom: -10rem;
+    height: 10rem; }
+  .page-template-page-about-our-team .content-area {
+    margin-top: 10rem; }
+  .page-template-page-about-our-team .team-members {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -ms-flex-pack: justify;
         justify-content: space-between; }
-  .member {
+  .page-template-page-about-our-team .member {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-direction: column;
         flex-direction: column;
     -ms-flex-preferred-size: 47%;
         flex-basis: 47%; }
-  .member-picture {
+  .page-template-page-about-our-team .member-picture {
     height: 282px;
     width: 100%;
     margin-bottom: 20px;
     margin-top: 40px; }
-  .member-name {
+  .page-template-page-about-our-team .member-name {
     font-size: 24px;
     font-weight: bold; }
-  .member-email.member-container {
+  .page-template-page-about-our-team .member-email.member-container {
     margin-bottom: 20px; }
-  .member-container {
+  .page-template-page-about-our-team .member-container {
     margin: 0 0; }
-  .member-position, .member-email, .member-bio {
+  .page-template-page-about-our-team .member-position, .page-template-page-about-our-team .member-email, .page-template-page-about-our-team .member-bio {
     font-size: 18px;
     line-height: 22px; }
-  ul li:nth-child(odd) img {
+  .page-template-page-about-our-team ul li:nth-child(odd) img {
     padding-left: 38px; }
-  ul li:nth-child(even) img {
+  .page-template-page-about-our-team ul li:nth-child(even) img {
     padding-right: 38px; }
-  .member-picture {
+  .page-template-page-about-our-team .member-picture {
     height: auto;
     max-width: 100%;
     margin-bottom: 20px;
     margin-top: 40px; }
-  .about-back-btn {
+  .page-template-page-about-our-team .about-back-btn {
     display: none; } }
 
 .page-template-page-about-our-board .donate-btn {
@@ -2953,6 +2958,11 @@ footer {
 @media all and (min-width: 480px) {
   .page-template-page-about-our-board .entry-header img {
     object-position: 45% 0%; }
+  .page-template-page-about-our-board .entry-title {
+    bottom: -10rem;
+    height: 10rem; }
+  .page-template-page-about-our-board .content-area {
+    margin-top: 10rem; }
   .page-template-page-about-our-board .entry-content P {
     font-style: lato, novecentosanswide, sans-serif;
     font-size: 18px; }
