Implementd About Page tablet view

--- a/themes/sgsc/sass/_content.scss
+++ b/themes/sgsc/sass/_content.scss
@@ -4,6 +4,11 @@
 
 @media screen and (min-width: 480px) {
 	html {
+	min-width: 768px;
+	}
+}
+@media screen and (min-width: 786px) {
+	html {
 	min-width: 1024px;
 	}
 }
