--- a/themes/sgsc/sass/_about.scss
+++ b/themes/sgsc/sass/_about.scss
@@ -4,10 +4,6 @@
     margin: 0 auto;
     height: 305px;  
     position: relative;
-    @media screen and (min-width: 480px) {
-      max-width: 1024px;
-      height: 356px; 
-    }
     img {
       width: 100%;
       height: 100%;
@@ -57,8 +53,45 @@
   }
 }
 
-@media all and (min-width: 480px) {
+@media all and (min-width: 481px) {
   .page-template-page-about {
+    .entry-header {
+      max-width: 768px;
+      height: 255px;
+      h1 {
+        padding: 40px 0;
+        font-size: $font_t-h1;
+      }
+    }
+    .entry-content {
+      width: 768px;
+      margin: auto;
+      margin-top: 1rem;
+    }
+    .about-links {
+        flex-flow: row wrap;
+        justify-content: space-around;
+        p {
+          width: 19.5rem;
+          height: 7.5rem;
+      }
+      a {
+        font-size: $font_t-h1;
+      }
+    }
+  }
+}
+
+@media all and (min-width: 769px) {
+  .page-template-page-about {
+    .entry-header {
+      max-width: 1024px;
+      height: 356px; 
+      h1 {
+        padding: 45px 0;
+        font-size: $font_d-h1;
+      }
+    }
     .entry-content {
       width: 1024px;
       margin: auto;
