--- a/themes/sgsc/sass/_front-page.scss
+++ b/themes/sgsc/sass/_front-page.scss
@@ -5,11 +5,18 @@
 .home .content-area {
   display: flex;
   justify-content: center;
+  @media screen and (min-width: $mobile_width) {
+    justify-content: flex-start !important;
+  }
   .site-main {
     width: 100%;
     display: flex;
     flex-flow: column nowrap;
     @media screen and (min-width: $mobile_width) {
+      width: 100vw;
+      justify-content: flex-start !important;
+    }
+    @media screen and (min-width: $tablet_width) {
       width: $d_width;
     }
     article {
@@ -26,8 +33,11 @@
   align-items: center;
   position: relative;
   width: 100%;
-  @media screen and (min-width: $mobile_width) {
+  @media screen and (min-width: $tablet_width) {
     height: 386px;
+  }
+  @media screen and (min-width: $mobile_width) {
+    height: 300px;
   }
   img {
     height: 276px;
@@ -61,8 +71,11 @@
     .m-button {
       display: flex;
     }
-    @media screen and (min-width: $mobile_width) {
+    @media screen and (min-width: $tablet_width) {
       height: 174px;
+    }
+    @media screen and (min-width: $mobile_width) {
+      height: 130px;
     }
   }
   @include text-donate;
@@ -89,8 +102,6 @@
     }
     a {
       text-decoration: none;
-      height: 100%;
-      width: 100%;
       color: $black;
       display: flex;
       justify-content: center;
@@ -126,19 +137,38 @@
       display: none;
       padding: 0 60px;
     }
-    @media screen and (min-width: $d_width) {
-      p {
-        display: inline-block;
-      }
-    }
     @media screen and (min-width: $mobile_width) {
-      width: 53%;
+      width: 63%;      
       height: 288px;
       flex-flow: column nowrap;
+      padding-left: 30px;
       justify-content: flex-start;
+      .program-sub {
+        display: inline-block;
+        padding: 15px 0;
+        width: 75%;
+      }
+      h1 {
+        padding-top: 20px;
+        width: 200px;
+        line-height: 1.4;
+      }
+    }
+    @media screen and (min-width: $tablet_width) {
+      width: 53%;      
+      .program-sub {
+        display: inline-block;
+        padding-left: 30px;
+        padding-bottom: 30px;
+        width: 95%;
+      }
       a {
-        padding-left: 60px;
-        justify-content: flex-start;
+          padding-left: 30px;
+      }
+      h1 {
+        width: 100%;
+        line-height: normal;
+        padding-bottom: 30px;
       }
     }
   }
@@ -147,6 +177,9 @@
       display: flex;
       justify-content: space-between;
       flex-flow: column nowrap;
+      width: 33%;
+    }
+    @media screen and (min-width: $tablet_width) { 
       width: 43%;
     }
     .front-events {
@@ -178,9 +211,6 @@
         height: 129px;
         background: $blue;
         text-align: center;
-        h1 {
-          font-size: 39px;
-        }
         @include hover-state {
           h1 {
             color: $white;
@@ -198,7 +228,7 @@
   position: relative;
   height: 276px;
   width: 100%;
-  @media screen and (min-width: $mobile_width) {
+  @media screen and (min-width: $tablet_width) {
     height: 356px;
   }
   article {
@@ -246,7 +276,7 @@
         text-align: center;
         margin: 0;
       }
-      @media screen and (min-width: $mobile_width) {
+      @media screen and (min-width: $tablet_width) {
         height: 174px;
         justify-content: space-around;
       }
@@ -283,26 +313,29 @@
     p {
       display: none;
     }
-    @media screen and (min-width: $d_width) {
+    @media screen and (min-width: $mobile_width) {
       p {
         line-height: 120%;
         text-align: center;
         display: flex;
         font-size: $font_d-sub-body;
       }
-    }
-    @media screen and (min-width: $mobile_width) {
       width: 76%;
       height: 297px;
       justify-content: space-around;
       border: $border $pink;
       p,
       h1 {
-        padding: 0 60px;
+        padding: 0;
         margin: 0;
       }
       @include hover-state {
         border: $p_border 4px;
+      }
+    }
+    @media screen and (max-width: 664px){
+      p {
+        display: none;
       }
     }
     .front-involved {
@@ -365,7 +398,7 @@
     flex-flow: column nowrap;
     text-align: center;
   }
-  @media screen and (min-width: $d_width) {
+  @media screen and (min-width: 644px) {
     p {
       display: flex;
       width: 70%;
