--- a/themes/sgsc/sass/_typography.scss
+++ b/themes/sgsc/sass/_typography.scss
@@ -30,6 +30,9 @@ h6 {
 h1 {
   font-size: $font_m-h1;
   @media screen and (min-width: $mobile_width) {
+    font-size: $font_t-h2;
+  }
+  @media screen and (min-width: $tablet_width) {
     font-size: $font_d-h1;
   }
 }
@@ -41,6 +44,9 @@ h5,
 h6 {
   font-size: $font_m-h2;
   @media screen and (min-width: $mobile_width) {
+    font-size: $font_t-h2;
+  }
+  @media screen and (min-width: $tablet_width) {
     font-size: $font_d-h2;
   }
 }
@@ -55,6 +61,9 @@ p {
   font-weight: normal;
   font-style: normal;
   @media screen and (min-width: $mobile_width) {
+    font-size: $font_t-body;
+  }
+  @media screen and (min-width: $tablet_width) {
     font-size: $font_d-body;
   }
 }
