--- a/themes/sgsc/sass/_home.scss
+++ b/themes/sgsc/sass/_home.scss
@@ -2,84 +2,107 @@
 # Single-Gallery Page
 --------------------------------------------------------------*/
   
-.blog .content-area {
+.content-area {
   display: flex;
   justify-content: center;
-  .site-main {
+    .site-header {
+        margin: 0;
+        height: 160px;
+        @include page-header;
+        @include m-donate;
+    }
+}  
+
+.site-main {
     width: 100%;
     display: flex;
     flex-flow: column nowrap;
-    @media screen and (min-width: $mobile_width) {
-      width: $d_width;
-      flex-flow: row wrap;
-      justify-content: space-between;
-      align-items: center;
+}
+
+.image-position {
+    img {
+        min-height: 100%;
+        max-height: 100%;
+        width: auto;
+        min-width: 100%;
+        object-fit: cover;
+        left: 50%;
+        top: 70%;
+        transform: translate(-50%, -70%);
+        max-width: none;
+        position: absolute;
     }
-    .site-header {
-      margin: 0;
-      height: 160px;
-      @include page-header;
-      @include m-donate;
-    }
-    article {
-      @media screen and (min-width: $mobile_width) {
-        width: 48%;
-      }
-    }
-    article .entry-header {
-      width: 100%;
-      height: 321px;
-      display: flex;
-      position: relative;
-      overflow: hidden;
-      justify-content: center;
-      align-items: center;
-      margin-top: 32px;
-      .image-position {
-        img {
-          min-height: 100%;
-          max-height: 100%;
-          width: auto;
-          min-width: 100%;
-          object-fit: cover;
-          left: 50%;
-          top: 70%;
-          transform: translate(-50%, -70%);
-          max-width: none;
-          position: absolute;
-        }
-      }
-      .entry-title {
-        z-index: 1;
-        height: 100%;
+}
+
+article .entry-header {
+    width: 100%;
+    height: 321px;
+    display: flex;
+    position: relative;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    margin-top: 32px;
+}
+.entry-title {
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column nowrap;
+    a {
         width: 100%;
+        @include border;
+        height: 100%;
+        background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));
         display: flex;
         justify-content: center;
         align-items: center;
         flex-flow: column nowrap;
-        a {
-          width: 100%;
-          @include border;
-          height: 100%;
-          background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-flow: column nowrap;
-          color: $black;
-          text-decoration: none;
-          @include hover-state {
-            color: $orange;
-          }
-          h2 {
-            font-size: $font_m-h1;
-            margin-bottom: 0;
-          }
+        color: $black;
+        text-decoration: none;
+        @include hover-state {
+        color: $orange;
         }
-        .entry-meta {
-          display: flex;
+        h2 {
+        font-size: $font_m-h1;
+        margin-bottom: 0;
         }
-      }
     }
-  }
+}
+
+.entry-meta {
+    display: flex;
+}
+
+@media screen and (min-width: $mobile_width) {
+    .content-area {
+        justify-content: flex-start;
+    }
+    .site-main {
+        width: 100vw;
+        flex-flow: row wrap;
+        justify-content: space-between;
+        align-items: center;
+    }
+    article {
+        width: 48%;
+    }
+}
+
+@media screen and (min-width: $tablet_width) {
+    .content-area {
+        justify-content: center;
+    }
+    article {
+        width: 48%;
+    }
+    .site-main {
+        width: $d_width;
+        flex-flow: row wrap;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
