--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -1771,174 +1771,197 @@ object {
 /*--------------------------------------------------------------
 # Single-Gallery Page
 --------------------------------------------------------------*/
-.blog .content-area {
+.content-area {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: center;
       justify-content: center; }
-  .blog .content-area .site-main {
-    width: 100%;
+  .content-area .site-header {
+    margin: 0;
+    height: 160px;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-flow: column nowrap;
-        flex-flow: column nowrap; }
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-align: center;
+        align-items: center;
+    position: relative;
+    background: #f5a623;
+    width: 100%;
+    min-height: 118px;
+    color: #000000; }
     @media screen and (min-width: 480px) {
-      .blog .content-area .site-main {
-        width: 1024px;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-        -ms-flex-align: center;
-            align-items: center; } }
-    .blog .content-area .site-main .site-header {
-      margin: 0;
-      height: 160px;
+      .content-area .site-header {
+        min-height: 160px; } }
+    .content-area .site-header .donate-btn {
+      background-color: #F91E72;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      z-index: 3;
       display: -ms-flexbox;
       display: flex;
       -ms-flex-pack: center;
           justify-content: center;
       -ms-flex-align: center;
           align-items: center;
-      position: relative;
-      background: #f5a623;
-      width: 100%;
-      min-height: 118px;
-      color: #000000; }
+      height: 2.3rem;
+      width: 2.3rem; }
       @media screen and (min-width: 480px) {
-        .blog .content-area .site-main .site-header {
-          min-height: 160px; } }
-      .blog .content-area .site-main .site-header .donate-btn {
-        background-color: #F91E72;
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        z-index: 3;
-        display: -ms-flexbox;
-        display: flex;
-        -ms-flex-pack: center;
-            justify-content: center;
-        -ms-flex-align: center;
-            align-items: center;
-        height: 2.3rem;
-        width: 2.3rem; }
+        .content-area .site-header .donate-btn {
+          height: 5rem;
+          width: 5rem; } }
+      .content-area .site-header .donate-btn a {
+        text-decoration: none;
+        color: #000000;
+        font-size: 1rem; }
         @media screen and (min-width: 480px) {
-          .blog .content-area .site-main .site-header .donate-btn {
-            height: 5rem;
-            width: 5rem; } }
-        .blog .content-area .site-main .site-header .donate-btn a {
-          text-decoration: none;
-          color: #000000;
-          font-size: 1rem; }
-          @media screen and (min-width: 480px) {
-            .blog .content-area .site-main .site-header .donate-btn a {
-              font-size: 4rem; } }
-          .blog .content-area .site-main .site-header .donate-btn a i {
-            font-weight: lighter;
-            padding: .5rem;
-            color: #000000; }
-            .blog .content-area .site-main .site-header .donate-btn a i:hover {
-              color: #f5a623; }
-          .blog .content-area .site-main .site-header .donate-btn a p {
-            display: none; }
-      .blog .content-area .site-main .site-header .entry-meta {
-        display: none; }
-      .blog .content-area .site-main .site-header .donate-btn {
-        background-color: #F91E72;
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        z-index: 3;
-        display: -ms-flexbox;
-        display: flex;
-        -ms-flex-pack: center;
-            justify-content: center;
-        -ms-flex-align: center;
-            align-items: center;
-        height: 2.3rem;
-        width: 2.3rem; }
-        @media screen and (min-width: 480px) {
-          .blog .content-area .site-main .site-header .donate-btn {
-            height: 5rem;
-            width: 5rem; } }
-        .blog .content-area .site-main .site-header .donate-btn a {
-          text-decoration: none;
-          color: #000000;
-          font-size: 1rem; }
-          @media screen and (min-width: 480px) {
-            .blog .content-area .site-main .site-header .donate-btn a {
-              font-size: 4rem; } }
-          .blog .content-area .site-main .site-header .donate-btn a i {
-            font-weight: lighter;
-            padding: .5rem;
-            color: #000000; }
-            .blog .content-area .site-main .site-header .donate-btn a i:hover {
-              color: #f5a623; }
-          .blog .content-area .site-main .site-header .donate-btn a p {
-            display: none; }
-    @media screen and (min-width: 480px) {
-      .blog .content-area .site-main article {
-        width: 48%; } }
-    .blog .content-area .site-main article .entry-header {
-      width: 100%;
-      height: 321px;
+          .content-area .site-header .donate-btn a {
+            font-size: 4rem; } }
+        .content-area .site-header .donate-btn a i {
+          font-weight: lighter;
+          padding: .5rem;
+          color: #000000; }
+          .content-area .site-header .donate-btn a i:hover {
+            color: #f5a623; }
+        .content-area .site-header .donate-btn a p {
+          display: none; }
+    .content-area .site-header .entry-meta {
+      display: none; }
+    .content-area .site-header .donate-btn {
+      background-color: #F91E72;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      z-index: 3;
       display: -ms-flexbox;
       display: flex;
-      position: relative;
-      overflow: hidden;
       -ms-flex-pack: center;
           justify-content: center;
       -ms-flex-align: center;
           align-items: center;
-      margin-top: 32px; }
-      .blog .content-area .site-main article .entry-header .image-position img {
-        min-height: 100%;
-        max-height: 100%;
-        width: auto;
-        min-width: 100%;
-        object-fit: cover;
-        left: 50%;
-        top: 70%;
-        transform: translate(-50%, -70%);
-        max-width: none;
-        position: absolute; }
-      .blog .content-area .site-main article .entry-header .entry-title {
-        z-index: 1;
-        height: 100%;
-        width: 100%;
-        display: -ms-flexbox;
-        display: flex;
-        -ms-flex-pack: center;
-            justify-content: center;
-        -ms-flex-align: center;
-            align-items: center;
-        -ms-flex-flow: column nowrap;
-            flex-flow: column nowrap; }
-        .blog .content-area .site-main article .entry-header .entry-title a {
-          width: 100%;
-          border: 4px transparent solid;
-          height: 100%;
-          background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8));
-          display: -ms-flexbox;
-          display: flex;
-          -ms-flex-pack: center;
-              justify-content: center;
-          -ms-flex-align: center;
-              align-items: center;
-          -ms-flex-flow: column nowrap;
-              flex-flow: column nowrap;
-          color: #000000;
-          text-decoration: none; }
-          .blog .content-area .site-main article .entry-header .entry-title a:hover, .blog .content-area .site-main article .entry-header .entry-title a:active, .blog .content-area .site-main article .entry-header .entry-title a:focus {
-            border: 4px #000000 solid; }
-          .blog .content-area .site-main article .entry-header .entry-title a:hover, .blog .content-area .site-main article .entry-header .entry-title a:active, .blog .content-area .site-main article .entry-header .entry-title a:focus {
+      height: 2.3rem;
+      width: 2.3rem; }
+      @media screen and (min-width: 480px) {
+        .content-area .site-header .donate-btn {
+          height: 5rem;
+          width: 5rem; } }
+      .content-area .site-header .donate-btn a {
+        text-decoration: none;
+        color: #000000;
+        font-size: 1rem; }
+        @media screen and (min-width: 480px) {
+          .content-area .site-header .donate-btn a {
+            font-size: 4rem; } }
+        .content-area .site-header .donate-btn a i {
+          font-weight: lighter;
+          padding: .5rem;
+          color: #000000; }
+          .content-area .site-header .donate-btn a i:hover {
             color: #f5a623; }
-          .blog .content-area .site-main article .entry-header .entry-title a h2 {
-            font-size: 22px;
-            margin-bottom: 0; }
-        .blog .content-area .site-main article .entry-header .entry-title .entry-meta {
-          display: -ms-flexbox;
-          display: flex; }
+        .content-area .site-header .donate-btn a p {
+          display: none; }
+
+.site-main {
+  width: 100%;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-flow: column nowrap;
+      flex-flow: column nowrap; }
+
+.image-position img {
+  min-height: 100%;
+  max-height: 100%;
+  width: auto;
+  min-width: 100%;
+  object-fit: cover;
+  left: 50%;
+  top: 70%;
+  transform: translate(-50%, -70%);
+  max-width: none;
+  position: absolute; }
+
+article .entry-header {
+  width: 100%;
+  height: 321px;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  overflow: hidden;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  margin-top: 32px; }
+
+.entry-title {
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-flow: column nowrap;
+      flex-flow: column nowrap; }
+  .entry-title a {
+    width: 100%;
+    border: 4px transparent solid;
+    height: 100%;
+    background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8));
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-align: center;
+        align-items: center;
+    -ms-flex-flow: column nowrap;
+        flex-flow: column nowrap;
+    color: #000000;
+    text-decoration: none; }
+    .entry-title a:hover, .entry-title a:active, .entry-title a:focus {
+      border: 4px #000000 solid; }
+    .entry-title a:hover, .entry-title a:active, .entry-title a:focus {
+      color: #f5a623; }
+    .entry-title a h2 {
+      font-size: 22px;
+      margin-bottom: 0; }
+
+.entry-meta {
+  display: -ms-flexbox;
+  display: flex; }
+
+@media screen and (min-width: 480px) {
+  .content-area {
+    -ms-flex-pack: start;
+        justify-content: flex-start; }
+  .site-main {
+    width: 100vw;
+    -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
+    -ms-flex-align: center;
+        align-items: center; }
+  article {
+    width: 48%; } }
+
+@media screen and (min-width: 768px) {
+  .content-area {
+    -ms-flex-pack: center;
+        justify-content: center; }
+  article {
+    width: 48%; }
+  .site-main {
+    width: 1024px;
+    -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
+    -ms-flex-align: center;
+        align-items: center; } }
 
 /*--------------------------------------------------------------
 # Archive-Gallery
