--- a/themes/sgsc/sass/_about-our-team.scss
+++ b/themes/sgsc/sass/_about-our-team.scss
@@ -4,10 +4,6 @@
     margin: 0 auto;
     height: 275px;  
     position: relative;
-    @media screen and (min-width: 480px) {
-      max-width: 1024px;
-      height: 375px; 
-    }
     img {
       width: 100%;
       height: 100%;
@@ -15,6 +11,7 @@
       object-position: 65% 0%;
       position: absolute;
     }
+
   }
   .entry-title {
     position: absolute;
@@ -27,10 +24,13 @@
     background: $orange;
     margin-bottom: 0;
   }
-  .entry-content p {
+  .entry-content {
+    padding: 0;
+    p {
     margin: 15px 22px;
     text-indent: 15px;
   }
+}
   .about-links {
     display: flex;
     flex-wrap: wrap;
@@ -112,36 +112,31 @@
   }
 }
 
+//Tablet
 @media all and (min-width: 480px) {
-
   .page-template-page-about-our-team {
     .entry-header {
+      max-width: 768px;
+      height: 265px; 
       img {
         object-position: 45% 0%;
       }
     }
-  
-
     .entry-content {
-    P {
-      font-style: $font__body;
-      font-size: $font_d-sub-body;
-      line-height: 24px;
+      padding: 0;
+      P {
+        font-style: $font__body;
+        font-size: $font_t-sub-body;
+        line-height: 24px;
+     }
+   }
+    .entry-title {
+      bottom: -7.5rem;
+      height: 7.5rem;
     }
-  }
-
-
-  .entry-title {
-    bottom: -10rem;
-    height: 10rem;
-  }
-    
-  .content-area {
-    margin-top: 10rem;
-  }
-
-
-  
+    .content-area {
+      margin-top: 7.5rem;
+    }
     .team-members {
       display: flex;
       flex-wrap: wrap;
@@ -153,13 +148,13 @@
       flex-basis: 47%;
     }
     .member-picture {
-      height: 282px;
+      height: 212px;
       width: 100%;
       margin-bottom: 20px;
       margin-top: 40px;
     }
     .member-name {
-      font-size: $font_d-body;
+      font-size: $font_t-body;
       font-weight: bold;
     }
     .member-email.member-container {
@@ -169,23 +164,64 @@
       margin: 0 0;
     }
     .member-position, .member-email, .member-bio {
-      font-size: $font_d-sub-body;
+      font-size: $font_t-sub-body;
       line-height: 22px;
     }
     ul li:nth-child(odd) img {
-      padding-left: 38px;
+      padding-left: 30px;
     }
     ul li:nth-child(even) img {
-      padding-right: 38px;
+      padding-right: 30px;
+    }
+    ul li:nth-child(odd) p {
+      padding-left: 30px;
+    }
+    ul li:nth-child(odd) h1 {
+      padding-left: 30px;
     }
     .member-picture {
-      height: auto;
       max-width: 100%;
       margin-bottom: 20px;
       margin-top: 40px;
     }
     .about-back-btn {
       display: none;
+    }
+  }
+}
+//Desktop
+@media all and (min-width: 769px) {
+  .page-template-page-about-our-team {
+    .entry-header {
+      max-width: 1024px;
+      height: 375px; 
+    }
+    .entry-content {
+      P {
+        font-size: $font_d-sub-body;
+     }
+   }
+    .entry-title {
+      bottom: -10rem;
+      height: 10rem;
+    }
+    .content-area {
+      margin-top: 10rem;
+    }
+    .member-picture {
+      height: 282px;
+    }
+    .member-name {
+      font-size: $font_d-body;
+    }
+    .member-position, .member-email, .member-bio {
+      font-size: $font_d-sub-body;
+    }
+    ul li:nth-child(odd) img {
+      padding-left: 38px;
+    }
+    ul li:nth-child(even) img {
+      padding-right: 38px;
     }
   }
 }
