--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -3098,10 +3098,6 @@ input.wpcf7-submit {
   margin: 0 auto;
   height: 275px;
   position: relative; }
-  @media screen and (min-width: 480px) {
-    .page-template-page-about-our-board .entry-header {
-      max-width: 1024px;
-      height: 375px; } }
   .page-template-page-about-our-board .entry-header img {
     width: 100%;
     height: 100%;
@@ -3123,9 +3119,11 @@ input.wpcf7-submit {
   background: #f5a623;
   margin-bottom: 0; }
 
-.page-template-page-about-our-board .entry-content p {
-  margin: 15px 22px;
-  text-indent: 15px; }
+.page-template-page-about-our-board .entry-content {
+  padding: 0; }
+  .page-template-page-about-our-board .entry-content p {
+    margin: 15px 22px;
+    text-indent: 15px; }
 
 .page-template-page-about-our-board .about-links {
   display: -ms-flexbox;
@@ -3209,16 +3207,22 @@ input.wpcf7-submit {
     color: white; }
 
 @media all and (min-width: 480px) {
-  .page-template-page-about-our-board .entry-header img {
-    object-position: 45% 0%; }
+  .page-template-page-about-our-board .entry-header {
+    max-width: 768px;
+    height: 265; }
+    .page-template-page-about-our-board .entry-header img {
+      object-position: 45% 0%; }
+  .page-template-page-about-our-board .entry-content {
+    padding: 0; }
+    .page-template-page-about-our-board .entry-content P {
+      font-style: lato, novecentosanswide, sans-serif;
+      font-size: 16px;
+      line-height: 24px; }
   .page-template-page-about-our-board .entry-title {
-    bottom: -10rem;
-    height: 10rem; }
+    bottom: -7.5rem;
+    height: 7.5rem; }
   .page-template-page-about-our-board .content-area {
-    margin-top: 10rem; }
-  .page-template-page-about-our-board .entry-content P {
-    font-style: lato, novecentosanswide, sans-serif;
-    font-size: 18px; }
+    margin-top: 7.5rem; }
   .page-template-page-about-our-board .board-p-1, .page-template-page-about-our-board .board-p-2 {
     font-size: 18px; }
   .page-template-page-about-our-board .team-members {
@@ -3236,24 +3240,28 @@ input.wpcf7-submit {
     -ms-flex-preferred-size: 47%;
         flex-basis: 47%; }
   .page-template-page-about-our-board .member-picture {
-    height: auto;
+    height: 212px;
     width: 100%;
     margin-bottom: 20px;
     margin-top: 40px; }
   .page-template-page-about-our-board .member-name {
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold; }
   .page-template-page-about-our-board .member-email.member-container {
     margin-bottom: 20px; }
   .page-template-page-about-our-board .member-container {
     margin: 0 0; }
   .page-template-page-about-our-board .member-position, .page-template-page-about-our-board .member-email, .page-template-page-about-our-board .member-bio {
-    font-size: 18px;
+    font-size: 16px;
     line-height: 22px; }
   .page-template-page-about-our-board ul li:nth-child(odd) img {
-    padding-left: 38px; }
+    padding-left: 30px; }
   .page-template-page-about-our-board ul li:nth-child(even) img {
-    padding-right: 38px; }
+    padding-right: 30px; }
+  .page-template-page-about-our-board ul li:nth-child(odd) p {
+    padding-left: 30px; }
+  .page-template-page-about-our-board ul li:nth-child(odd) h1 {
+    padding-left: 30px; }
   .page-template-page-about-our-board .member-picture {
     height: auto;
     max-width: 100%;
@@ -3261,6 +3269,28 @@ input.wpcf7-submit {
     margin-top: 40px; }
   .page-template-page-about-our-board .about-back-btn {
     display: none; } }
+
+@media all and (min-width: 769px) {
+  .page-template-page-about-our-board .entry-header {
+    max-width: 1024px;
+    height: 375px; }
+  .page-template-page-about-our-board .entry-content P {
+    font-size: 18px; }
+  .page-template-page-about-our-board .entry-title {
+    bottom: -10rem;
+    height: 10rem; }
+  .page-template-page-about-our-board .content-area {
+    margin-top: 10rem; }
+  .page-template-page-about-our-board .member-picture {
+    height: 282; }
+  .page-template-page-about-our-board .member-name {
+    font-size: 24px; }
+  .page-template-page-about-our-board .member-position, .page-template-page-about-our-board .member-email, .page-template-page-about-our-board .member-bio {
+    font-size: 18px; }
+  .page-template-page-about-our-board ul li:nth-child(odd) img {
+    padding-left: 38px; }
+  .page-template-page-about-our-board ul li:nth-child(even) img {
+    padding-right: 38px; } }
 
 .program-hero {
   height: 19rem;
